<resources>
    <string name="app_name">Hello</string>
    <string name="merry_christmas">Merry Christmas！</string>
    <string name="chalies">Chalies</string>
    <string name="txtout1">温度转换器</string>
    <string name="txtout2">华氏度</string>
    <string name="inp">请输入摄氏温度</string>
    <string name="txtout3">TeamA</string>
    <string name="txtout4">0</string>
    <string name="txtout4b">0</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">EURO</string>
    <string name="btn_won_label">WON</string>
    <string name="btn_openfig_label">Config</string>
    <string name="btn_save_label">SAVE</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="Ctable">CREATE TABLE</string>


</resources>
