<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".RateActivity">
    <EditText
        android:id="@+id/rmb"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rmb_hint"/>
    <TextView
        android:id="@+id/showOut"
        android:textSize="35sp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_dollar"
        android:text="@string/btn_dollar_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="OnClick" />
    <Button
        android:id="@+id/btn_euro"
        android:onClick="onClick"
        android:text="@string/btn_euro_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_won"
        android:onClick="onClick"
        android:text="@string/btn_won_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_openfg"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:onClick="openOne"
        android:text="@string/btn_openfig_label"
        />

</LinearLayout>